# WPO-AI-Reader-WebAPP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  assistant.py  config.py  main.py
app/static/: app.js  index.html  styles.css
app/worldpanel/: __init__.py  checker.py  client.py  data_explorer.py  datastore.py  executor.py  local_answer.py  multitable.py  parser.py  pivot_cache.py  pivot_driver.py  pivot_models.py  pivot_parser.py  pivot_result.py  pivot_service.py  planner.py  probe.py  query.py  schema.py  semantic_match.py  session.py
docs/: public-web-app.md
docs/superpowers/plans/: 2026-06-03-worldpanel-ai-reader.md  2026-06-11-wpo-ai-reader-completion.md  2026-06-16-wpo-public-web-app.md
docs/superpowers/specs/: 2026-06-03-worldpanel-ai-reader-design.md  2026-06-10-pivot-member-selection-redesign.md  2026-06-11-browser-ai-configuration-design.md
docs/verification/: 2026-06-10-pivot-redesign-plan-audit.md
scripts/: probe-pivot-member-tree.py  start-worldpanel-reader.ps1  stop-worldpanel-reader.ps1
tests/: test_access_api.py  test_assistant.py  test_checker.py  test_data_explorer.py  test_llm_first_resolution.py  test_parser.py  test_pivot_api.py  test_pivot_capabilities.py  test_pivot_redesign.py  test_pivot_result.py  test_probe.py  test_query.py  test_static_ui.py  test_worldpanel_client.py
